                               Release History
===========================================================================

3.6 to 3.7: (April xx, 2012)

  * Updated the CompuMate keyboard handler to recognize more keys on an
    actual keyboard, instead of having to remember the weird combinations
    used on the original CompuMate keyboard.

-Have fun!


3.5.5 to 3.6: (March 16, 2012)

  * Added support for 2600-daptor II device, including native support
    for 7800 controllers, BoosterGrip and Keypad controllers.  Special
    thanks go to Tom Hafner for a complimentary test sample of this
    device, and also for donating a BoosterGrip controller.

  * Added ability to dynamically swap the port order of Stelladaptor/
    2600-daptor devices with the 'Control-1' key combo (useful if you
    have only one 2600-daptor and want to use it as a left port
    normally, but as a right port for Star Raiders, etc).

  * Added CompuMate bankswitching/controller support to the emulation
    core; the Spectravideo CompuMate ROMs (NTSC and PAL) now work.
    Frequently used keys on the CompuMate are directly mapped to your
    keyboard (ie, Func-Space for backspace is mapped to Backspace, etc).
    Loading/saving from the cassette player is not yet supported, and
    will come in a future release.

  * Fixed bug in BoosterGrip controller emulation; the functionality
    of the booster and trigger buttons was reversed.  Related to this,
    renamed these actions in the Event Mapping dialog to be more clear.

  * Reverted to SDL 1.2.14 for the Windows 98/2k release, since SDL
    1.2.15 isn't supported in that environment.

  * Updated included PNG library to latest stable version.


3.5 to 3.5.5: (February 4, 2012)

  * Due to changes in the debugger, old state files will not work with
    this release.

  * Fixed bug in sound restructuring introduced in the last release; in
    some cases, there could be some sound 'crackling' when starting a