@@ -10,7 +10,7 @@
   <br><br>
   <center><h2><b>A multi-platform Atari 2600 VCS emulator</b></h2></center>
 
-  <center><h4><b>Release 3.6</b></h4></center>
+  <center><h4><b>Release 3.7</b></h4></center>
   <br><br>
 
   <center><h2><b>User's Guide</b></h2></center>
@@ -54,7 +54,7 @@
 
   <br><br><br>
 
-  <center><b>February 1999 - March 2012</b></center>
+  <center><b>February 1999 - April 2012</b></center>
     <center><b>The Stella Team</b></center>
   <center><b><a href="http://stella.sourceforge.net">Stella Homepage</a></b></center>
 
@@ -263,6 +263,7 @@
     <li>Emulates Spectravideo CompuMate system using your computer's keyboard,
       including mapping of CompuMate 'Backspace', 'Space' and 'Enter' functionality to
       to the actual keys on your keyboard.</li>
+    <li>Emulates the Mindlink Controller using your computer's mouse</li>
     <li>Support for real Atari 2600 controllers using the
       <a href="http://www.stelladaptor.com">Stelladaptor</a> and
       <a href="http://2600-daptor.com">2600-adaptor/2600-daptor II</a></li>
@@ -1660,6 +1661,14 @@
       <td> &#x2715;</td>
       <td> &#x2715;</td>
       <td> &#x2715;</td>
+      <td> &#x2715;</td>
+    </tr>
+    <tr>
+      <th> Mindlink</th>
+      <td> &#x2715;</td>
+      <td> &#x2715;</td>
+      <td> &#x2713;</td>
+      <td> &#x2713; (axis ignored)</td>
       <td> &#x2715;</td>
     </tr>
     <tr>
@@ -3180,6 +3189,7 @@ Ms Pac-Man (Stella extended codes):
         <tr><td><a href="http://www.vectrex.biz/MemCard.htm">SaveKey</a></td><td>A 32K EEPROM for saving high scores, etc (the EEPROM portion of an AtariVox).</td></tr>
         <tr><td>Genesis </td><td>Sega Genesis controller, which can be used similar to a BoosterGrip, giving an extra button.</td></tr>
         <tr><td>CompuMate </td><td>Spectravideo CompuMate (if either left or right is set, CompuMate is used for both).</td></tr>
+        <tr><td>Mindlink </td><td>Mindlink controller.</td></tr>
       </table></td>
     </tr>
 
