@@ -23,12 +23,14 @@
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 MindLink::MindLink(Jack jack, const Event& event, const System& system)
   : Controller(jack, event, system, Controller::MindLink),
-    myIOPort(0xff),
     myMindlinkPos(0x2800),
-    myMindlinkPos1(0x2800),
-    myMindlinkPos2(0x1000),
     myMindlinkShift(1)
 {
+  myDigitalPinState[One]   = true;
+  myDigitalPinState[Two]   = true;
+  myDigitalPinState[Three] = true;
+  myDigitalPinState[Four]  = true;
+
   // Analog pins are never used by the MindLink
   myAnalogPinValue[Five] = myAnalogPinValue[Nine] = maximumResistance;
 }
@@ -41,61 +43,35 @@ MindLink::~MindLink()
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 void MindLink::update()
 {
-  myIOPort |= 0xf0;
-  if(0)//MPdirection & 0x01)
-    myMindlinkPos = myMindlinkPos2 + 0x1800;
-  else
-    myMindlinkPos = myMindlinkPos1;
-	
+  myDigitalPinState[One]   =
+  myDigitalPinState[Two]   =
+  myDigitalPinState[Three] =
+  myDigitalPinState[Four]  = true;
+
   myMindlinkPos = (myMindlinkPos & 0x3fffffff) +
                   (myEvent.get(Event::MouseAxisXValue) << 3);
   if(myMindlinkPos < 0x2800)
     myMindlinkPos = 0x2800;
   if(myMindlinkPos >= 0x3800)
     myMindlinkPos = 0x3800;
-	
-
-  if(0)//MPdirection & 0x01)
-  {
-    myMindlinkPos2 = myMindlinkPos - 0x1800;
-    myMindlinkPos = myMindlinkPos2;
-  }
-  else
-    myMindlinkPos1 = myMindlinkPos;
 
   myMindlinkShift = 1;
   nextMindlinkBit();
 
   if(myEvent.get(Event::MouseButtonLeftValue) ||
      myEvent.get(Event::MouseButtonRightValue))
-    myMindlinkPos |= 0x4000; /* this bit starts a game */
-
-//cerr << HEX4 << (int)myMindlinkPos << " : " << HEX2 << (int)myIOPort << endl;
-
-  // Convert IOPort values back to booleans
-  myDigitalPinState[One]   = myIOPort & 0x10;
-  myDigitalPinState[Two]   = myIOPort & 0x20;
-  myDigitalPinState[Three] = myIOPort & 0x40;
-  myDigitalPinState[Four]  = myIOPort & 0x80;
+    myMindlinkPos |= 0x4000;  // this bit starts a game
 }
 
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 void MindLink::nextMindlinkBit()
 {
-  if(myIOPort & 0x10)
+  if(myDigitalPinState[One])
   {
-    myIOPort &= 0x3f;
+    myDigitalPinState[Three] = false;
+    myDigitalPinState[Four]  = false;
     if(myMindlinkPos & myMindlinkShift)
-      myIOPort |= 0x80;
+      myDigitalPinState[Four] = true;
     myMindlinkShift <<= 1;
-
-  myDigitalPinState[One]   = myIOPort & 0x10;
-  myDigitalPinState[Two]   = myIOPort & 0x20;
-  myDigitalPinState[Three] = myIOPort & 0x40;
-  myDigitalPinState[Four]  = myIOPort & 0x80;
-
-
-cerr << dec << (int)myMindlinkShift << " : " << HEX2 << (int)myIOPort << endl;
-
 	}
 }
