@@ -402,6 +402,14 @@
 "Controller.MouseAxis" "01"
 ""
 
+"Cartridge.MD5" "c246e05b52f68ab2e9aee40f278cd158"
+"Cartridge.Manufacturer" "Thomas Jentzsch"
+"Cartridge.Name" "Star Wars - Ewok Adventure (Thomas Jentzsch) (Prototype)"
+"Cartridge.Note" "NTSC Conversion"
+"Cartridge.Rarity" "Homebrew"
+"Display.Height" "230"
+""
+
 "Cartridge.MD5" "7b5207e68ee85b16998bea861987c690"
 "Cartridge.Manufacturer" "Atari, Carol Shaw"
 "Cartridge.ModelNo" "CX26163P"
@@ -411,14 +419,6 @@
 
 "Cartridge.MD5" "f1beca5a198cf08190487e5c27b8e540"
 "Cartridge.Name" "Fu Kung! (V0.16) (2003) (AD)"
-""
-
-"Cartridge.MD5" "c246e05b52f68ab2e9aee40f278cd158"
-"Cartridge.Manufacturer" "Thomas Jentzsch"
-"Cartridge.Name" "Star Wars - Ewok Adventure (Thomas Jentzsch) (Prototype)"
-"Cartridge.Note" "NTSC Conversion"
-"Cartridge.Rarity" "Homebrew"
-"Display.Height" "230"
 ""
 
 "Cartridge.MD5" "cba56e939252b05df7b7de87307d12ca"
@@ -760,6 +760,11 @@
 "Cartridge.Rarity" "Prototype"
 ""
 
+"Cartridge.MD5" "bdf1996e2dd64baf8eff5511811ca6ca"
+"Cartridge.Manufacturer" "Tron"
+"Cartridge.Name" "H.E.R.O. (Tron)"
+""
+
 "Cartridge.MD5" "81414174f1816d5c1e583af427ac89fc"
 "Cartridge.Manufacturer" "Thomas Jentzsch"
 "Cartridge.Name" "Treasure Below (Thomas Jentzsch)"
@@ -775,11 +780,6 @@
 "Cartridge.ModelNo" "PGP235"
 "Cartridge.Name" "Fussball (Ariola) (PAL)"
 "Cartridge.Note" "AKA International Soccer"
-""
-
-"Cartridge.MD5" "bdf1996e2dd64baf8eff5511811ca6ca"
-"Cartridge.Manufacturer" "Tron"
-"Cartridge.Name" "H.E.R.O. (Tron)"
 ""
 
 "Cartridge.MD5" "521f4dd1eb84a09b2b19959a41839aad"
@@ -9233,9 +9233,7 @@
 "Cartridge.MD5" "0e224ea74310da4e7e2103400eb1b4bf"
 "Cartridge.Manufacturer" "Atari, Peter C. Niday, Howard Scott Warshaw"
 "Cartridge.Name" "Mind Maze (10-10-1984) (Atari) (Prototype)"
-"Cartridge.Note" "Uses the Mindlink Controller"
 "Cartridge.Rarity" "Prototype"
-"Controller.Left" "MINDLINK"
 ""
 
 "Cartridge.MD5" "eb503cc64c3560cd78b7051188b7ba56"
@@ -14298,9 +14296,7 @@
 "Cartridge.MD5" "3d7aad37c55692814211c8b590a0334c"
 "Cartridge.Manufacturer" "Atari, Dan Oliver"
 "Cartridge.Name" "Telepathy (1983) (Atari) (Prototype)"
-"Cartridge.Note" "Uses the Mindlink Controller"
 "Cartridge.Rarity" "Prototype"
-"Controller.Left" "MINDLINK"
 ""
 
 "Cartridge.MD5" "f777444fc21a5925e066b68b1d350575"
